# birlaai

./: .replit  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
attached_assets/: Pasted--UTC-Logs-for-gazn9amnoznpxgjdrvmy8b-streamlit-app--1745054748215.txt
data/: symptoms.py
static/: style.css
utils/: database.py  gemini_helper.py  openai_helper.py  report_generator.py  symptom_analyzer.py  ui_helpers.py
