[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
]
